test/files/neg/t10228.check
t10228.scala:9: error: malformed type: A#Type
  def g[A <: Fili[A]]: Unit = implicitly[A <:< A#Type]
                                                 ^
one error found
